<resources>
    <string name="app_name">Grupo Carolo Loyalty</string>
    <string name="open_drawer_content_desc_res">Menu Abierto</string>
    <string name="close_drawer_content_desc_res">Menu Abierto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="urlDefaultWebView">https://www.grupocarolo.com.mx</string>
    <string name="urlPrivacy">https://www.grupocarolo.com.mx/avisodeprivacidad</string>
    <string name="urlTerms">https://www.grupocarolo.com.mx/terminosycondiciones</string>

    <string name="login">GRUPO CAROLO</string>
    <string name="btn_login">Entrar</string>
    <string name="email">E-mail o número de celular</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="confirm_password_title">Cambiar contraseña</string>
    <string name="confirm_password_alert_title">Se ha cambiado su contraseña correctamente</string>
    <string name="user_type">Tipo de usuario</string>
    <string name="recover_password">¿Olvidaste tu  contraseña?</string>
    <string name="recover_description_password">Ingresa tu correo y te enviaremos unn código de verificación</string>
    <string name="change_description_password">*Ingresa tu nueva contraseña para iniciar sesión</string>
    <string name="recovery_celular">Número de celular</string>
    <string name="recover_send">Enviar</string>
    <string name="not_account">¿No tienes cuenta?</string>
    <string name="create_account">Crear una cuenta</string>
    <string name="btn_create_account">Registrar</string>
    <string name="btn_update">Actualizar</string>

    <string name="next">Siguiente</string>
    <string name="message_welcome">Bienvenido a</string>
    <string name="message_start">¡Hola X!</string>

    <string name="recent_activitys">Actividad Reciente</string>
    <string name="message_balance">SALDO</string>
    <string name="default_ammount">$0.00</string>
    <string name="txt_invoice">Facturar</string>
    <string name="txt_accumulate">Acumular</string>
    <string name="txt_pay">Pagar</string>
    <string name="txt_more_do">¿Qué más puedo hacer?</string>

    <string name="message_title_configuration_account">Cuenta</string>
    <string name="message_configuration_change_password">Cambiar contraseña</string>
    <string name="message_configuration_delete_account">Eliminar cuenta</string>
    <string name="message_configuration_delete_account_question">¿Deseas eliminar tu cuenta?</string>
    <string name="message_title_configuration_others">Otros</string>
    <string name="message_configuration_delivery">Configuración delivery</string>
    <string name="message_configuration_privacy">Políticas de privacidad</string>
    <string name="message_configuration_terms">Términos y condiciones</string>
    <string name="message_configuration_close_session">Salir de la cuenta</string>

    <string name="message_title_address">Direcciones</string>
    <string name="message_title_address_without">Aún no tienes direcciones guardadas.</string>
    <string name="message_title_payments">Métodos de Pago</string>

    <string name="alert_positive_text_default">Aceptar</string>
    <string name="alert_negative_text_default">Cancelar</string>

    <string name="alert_message_logout">¿Deseas cerrar sesión?</string>

    <string name="title_create_account_type">Tipo de cuenta</string>
    <string name="title_create_personal_data_type">Datos personales</string>
    <string name="title_create_more_information_type">Más información</string>
    <string name="title_create_security">Seguridad</string>
    <string name="title_create_notes_type">Notas</string>

    <string name="hint_create_name">Nombre completo</string>
    <string name="hint_create_mail">E-mail</string>
    <string name="hint_create_code_phone">Código</string>
    <string name="hint_create_phone_number">Número de celular</string>
    <string name="hint_create_day">Día</string>
    <string name="hint_create_month">Mes</string>
    <string name="hint_create_year">Año</string>
    <string name="hint_create_birthday">*Proporciona este dato y obtén un beneficio en tu cumpleaños</string>
    <string name="hint_create_sex">Sexo</string>
    <string name="hint_create_password">Contraseña</string>
    <string name="hint_create_confirm_password">Confirmar contraseña</string>
    <string name="hint_create_terms_conditions">He leído y acepto los Términos y Condiciones, así como el Aviso de Privacidad</string>

    <string name="add_addrress_title">Agregar dirección</string>
    <string name="add_addrress_street">Calle</string>
    <string name="add_addrress_number">Número</string>
    <string name="add_addrress_int">Interior</string>
    <string name="add_addrress_cp">Código Postal</string>
    <string name="add_addrress_suburb">Colonia</string>
    <string name="add_addrress_reference">Referencia</string>
    <string name="add_addrress_next">Siguiente</string>

    <string name="add_rfc">Registrar RFC</string>

    <string name="recent_activities_title">Mi cuenta</string>
    <string name="recent_activities_subtitle">Actividad reciente</string>
    <string name="recent_activities_no_activities">Aún no tienes actividad para mostrar</string>

    <string name="configuration_title">Configuración</string>
    <string name="perfil_title">Mi Perfil</string>
    <string name="rfc_title">Selecciona RFC</string>
    <string name="no_rfc">Aún no tienes un RFC registrado</string>
    <string name="acumulate_title">Acumular</string>

    <string name="my_service_date">Fecha: %1s\n\n</string>
    <string name="my_service_couple">Tipo: %1s\n\n</string>
    <string name="my_service_gender">Género de teraèuta: %1s</string>
    <string name="my_service_to_take">PRÓXIMOS</string>
    <string name="my_service_take_it">COMPLETADOS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Gender_Names">
        <item>Otro</item>
        <item>Mujer</item>
        <item>Hombre</item>
    </string-array>

    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>

</resources>