<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".modules.createAccount.CreateAccountFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/default_horizontal_margin"
            android:paddingVertical="@dimen/default_vertical_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/max_horizontal_margin"
                android:layout_marginVertical="@dimen/wide_vertical_margin"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:hint="@string/hint_create_name"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:hint="@string/hint_create_mail"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_code_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/hint_create_code_phone"
                    android:inputType="text"
                    android:text="+52" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_create_phone_number"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:hint="@string/hint_create_day"
                    android:inputType="text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:hint="@string/hint_create_month"
                    android:inputType="text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:hint="@string/hint_create_year"
                    android:inputType="text" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_recovery_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:text="@string/hint_create_birthday"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size_19" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:hint="@string/hint_create_sex"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:hint="@string/hint_create_password"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:hint="@string/hint_create_confirm_password"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_vertical_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/btn_check_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint=""
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hint_create_birthday" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button_default"
                android:layout_marginHorizontal="@dimen/max_horizontal_margin"
                android:layout_marginVertical="@dimen/wide_vertical_margin"
                android:text="@string/btn_create_account"
                app:cornerRadius="6dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>