<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_gray"
    tools:context=".modules.recoveryPassword.RecoveryPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_horizontal_margin"
        android:paddingVertical="@dimen/default_vertical_margin">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button_default"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/black_overlay_2"
            android:text="@string/next"
            android:textColor="@color/white"
            app:cornerRadius="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_start"
                android:textAlignment="textStart"
                android:textColor="@color/warning_color"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginVertical="@dimen/min_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_welcome"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>