<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    tools:context=".modules.recoveryPassword.RecoveryPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/font_gray"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_horizontal_margin"
        android:paddingVertical="@dimen/default_vertical_margin">


        <TextView
            android:id="@+id/title_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/max_vertical_margin"
            android:text="@string/recover_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_19"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_recovery_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/max_horizontal_margin"
            android:layout_marginVertical="@dimen/max_vertical_margin"
            android:text="@string/recover_description_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_recovery" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/max_horizontal_margin"
            android:layout_marginVertical="@dimen/wide_vertical_margin"
            android:background="@color/white"
            app:cornerRadius="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_account_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recovery_celular"
                android:inputType="text|textPassword"
                app:cornerRadius="6dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_default"
            android:layout_marginHorizontal="@dimen/max_horizontal_margin"
            android:layout_marginVertical="@dimen/wide_vertical_margin"
            android:backgroundTint="@color/light_blue_600"
            android:text="@string/recover_send"
            app:cornerRadius="6dp" />


    </LinearLayout>

</FrameLayout>