<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img2"
    android:clickable="true"
    tools:context=".modules.recoveryPassword.RecoveryPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_horizontal_margin"
        android:paddingVertical="@dimen/default_vertical_margin">


        <TextView
            android:id="@+id/title_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/max_vertical_margin"
            android:text="@string/recover_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_19"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_recovery_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_recovery"
            android:layout_marginHorizontal="@dimen/max_horizontal_margin"
            android:layout_marginVertical="@dimen/max_vertical_margin"
            android:text="@string/change_description_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_recovery" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_recovery_description"
            android:layout_marginHorizontal="@dimen/max_horizontal_margin"
            android:layout_marginVertical="@dimen/wide_vertical_margin"
            android:tag="0"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/white_transparent"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconDrawable="@drawable/drright_password_hide"
            app:endIconMode="custom"
            app:endIconTint="@color/white"
            app:startIconDrawable="@drawable/drleft_password"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_account_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginHorizontal="@dimen/max_horizontal_margin"
            android:layout_marginVertical="@dimen/wide_vertical_margin"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/white_transparent"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/drleft_password"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_account_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="text|textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_default"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/max_horizontal_margin"
            android:layout_marginVertical="@dimen/wide_vertical_margin"
            android:backgroundTint="@color/boton_color"
            android:text="@string/recover_send"
            app:cornerRadius="8dp" />


    </RelativeLayout>

</FrameLayout>