<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".modules.recoveryPassword.RecoveryPasswordFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_horizontal_margin"
        android:paddingVertical="@dimen/default_vertical_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="@dimen/card_default_elevation"
            app:cardCornerRadius="@dimen/card_default_radius"
            app:cardElevation="@dimen/card_default_elevation"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_recovery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/max_vertical_margin"
                    android:text="@string/recover_password"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_19"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_recovery_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/max_vertical_margin"
                    android:layout_marginHorizontal="@dimen/max_horizontal_margin"
                    android:text="@string/recover_description_password"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_19"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_recovery" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/max_horizontal_margin"
                    android:layout_marginVertical="@dimen/extra_wide_vertical_margin"
                    android:hint="@string/recovery_celular"
                    android:inputType="text|textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recovery_description" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_button_default"
                    android:layout_marginHorizontal="@dimen/max_horizontal_margin"
                    android:layout_marginVertical="@dimen/wide_vertical_margin"
                    android:text="@string/recover_send"
                    app:cornerRadius="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</FrameLayout>